# myAI

./: README.md  pyproject.toml  tmp.ipynb
AI/: __init__.py
tests/: test_network.py
